force-app/main/default/objects/MPContractCondition__c/MPContractCondition__c.object-meta.xml
<CustomObject>
    <label>Condición de Contrato</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Condición de Contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condiciones de Contrato</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>