force-app/main/default/objects/MPContractCondition__c/fields/MPAdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>MPAdjustmentType__c</fullName>
    <label>Tipo de Ajuste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPAdjustmentTypes</valueSetName>
    </valueSet>
</CustomField>