force-app/main/default/objects/MPContractCondition__c/fields/MPAllowsModification__c.field-meta.xml
<CustomField>
    <fullName>MPAllowsModification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permite Modificación</label>
    <type>Checkbox</type>
</CustomField>