force-app/main/default/objects/MPContractCondition__c/fields/MPClaseCondicion__c.field-meta.xml
<CustomField>
    <fullName>MPClaseCondicion__c</fullName>
    <formula>MPConditionClass__r.Name</formula>
    <label>Clase de Condición</label>
    <type>Text</type>
</CustomField>