force-app/main/default/objects/MPContractCondition__c/fields/MPConditionType__c.field-meta.xml
<CustomField>
    <fullName>MPConditionType__c</fullName>
    <label>Tipo de Condición</label>
    <length>255</length>
    <type>Text</type>
</CustomField>