force-app/main/default/objects/MPContractCondition__c/fields/MPExternalPurpose__c.field-meta.xml
<CustomField>
    <fullName>MPExternalPurpose__c</fullName>
    <label>Propósito Frente al Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>