force-app/main/default/objects/MPContractCondition__c/fields/MPGetValueFromPricing__c.field-meta.xml
<CustomField>
    <fullName>MPGetValueFromPricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Value From Pricing</label>
    <type>Checkbox</type>
</CustomField>