force-app/main/default/objects/MPContractCondition__c/fields/MPIsDefault__c.field-meta.xml
<CustomField>
    <fullName>MPIsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Default</label>
    <type>Checkbox</type>
</CustomField>