force-app/main/default/objects/MPContractCondition__c/fields/MPOriginValue__c.field-meta.xml
<CustomField>
    <fullName>MPOriginValue__c</fullName>
    <label>Valor de Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>