force-app/main/default/objects/MPContractCondition__c/fields/MPSuggestedAdjustment__c.field-meta.xml
<CustomField>
    <fullName>MPSuggestedAdjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ajuste Sugerido</label>
    <referenceTo>MPAdjustment__c</referenceTo>
    <relationshipName>MPAdjustmentConditionClasses</relationshipName>
    <type>Lookup</type>
</CustomField>