force-app/main/default/objects/MPContractCondition__c/fields/MPSuggestedCalculationRule__c.field-meta.xml
<CustomField>
    <fullName>MPSuggestedCalculationRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Norma de Cálculo Sugerida</label>
    <referenceTo>MPCalculationRule__c</referenceTo>
    <relationshipLabel>Condiciones de Contrato</relationshipLabel>
    <relationshipName>ContractConditions</relationshipName>
    <type>Lookup</type>
</CustomField>