force-app/main/default/objects/MPContractCondition__c/fields/MPTimeFrequency__c.field-meta.xml
<CustomField>
    <fullName>MPTimeFrequency__c</fullName>
    <label>Frecuencia de Tiempo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>